--- a/configs/data/coco_lt.yaml
+++ b/configs/data/coco_lt.yaml
@@ -1,5 +1,5 @@
-root: '/home/wzz/COCO'
+root: '/home/ubuntu/Datasets/COCO'
 test_path: 'annotations/instances_val2017.json'
-train_path: '/home/wzz/SCPNet/dataset/coco_lt_train.txt'
-data_path_val: '/home/wzz/COCO/val2017'  # args.data
-data_path_train: '/home/wzz/COCO/train2017'  # args.data
+train_path: '/home/ubuntu/wzz/qusi/data/coco/coco_lt_train.txt'
+data_path_val: '/home/ubuntu/Datasets/COCO/val2017'  # args.data
+data_path_train: '/home/ubuntu/Datasets/COCO/train2017'  # args.data
