--- a/configs/data/voc_lt.yaml
+++ b/configs/data/voc_lt.yaml
@@ -1,5 +1,4 @@
-root: '/home/wzz/voc'
-test_path: 'annotations/instances_val2017.json'
-train_path: '/home/wzz/SCPNet/dataset/coco_lt_train.txt'
-data_path_val: '/home/wzz/COCO/val2017'  # args.data
-data_path_train: '/home/wzz/COCO/train2017'  # args.data
+root: '/home/ubuntu/Datasets/voc/'
+test_path: './data/voc/voc_lt_test.txt'
+train_path: './data/voc/voc_lt_train.txt'
+
